--- a/yaml/mysql.yaml
+++ b/yaml/mysql.yaml
@@ -9,7 +9,7 @@ spec:
     - port: 3306
   selector:
     app: mysql
-  clusterIP: None
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,7 +22,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 2Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -50,7 +50,7 @@ spec:
           name: mysql
         volumeMounts:
         - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+          mountPath: /var/www/html
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
