mysql container done

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -11,6 +11,9 @@
 # **************************************************************************** #
 
 FROM alpine:3.11
+
 COPY ./script/ .
-RUN sh install.sh
-CMD sh start.sh
+COPY ./srcs/ .
+EXPOSE 3306
+RUN /install.sh
+CMD /start.sh
