--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -3,5 +3,6 @@ COPY ./script/install.sh .
 RUN sh install.sh
 COPY ./srcs/nginx.conf /etc/nginx/
 COPY ./script/start.sh .
-RUN echo "daemon off;" >> /etc/nginx/nginx.conf
+COPY ./srcs/wp-config.php /www/
+# RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 CMD sh start.sh
