--- a/yaml/wordpress.yaml
+++ b/yaml/wordpress.yaml
@@ -6,7 +6,9 @@ metadata:
     app: wordpress
 spec:
   ports:
-    - port: 80
+    - name: wordpress
+      port: 80          # - port exposed internally in the cluster
+      targetPort: 80    # - the container port to send requests to
   selector:
     app: wordpress
   type: LoadBalancer
@@ -22,7 +24,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 2Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
