grafana, influxdb, telegraf - Done

--- a/nginx/srcs/default_.conf
+++ b/nginx/srcs/default_.conf
@@ -32,13 +32,17 @@ server {
         	proxy_buffer_size 1024k;
 		}
 
+		location ~ \.php$ {
+			include fastcgi.conf;
+            include fastcgi_params; #or whatever you named it
+			fastcgi_pass  127.0.0.1:9000;
+		}
+
 		location /wordpress {
-				return 307 http://192.168.64.10:5050/;
+				return 307 http://MINIKUBE_IP:5050/;
 		}
 
 		location /phpmyadmin {
-                proxy_pass http://192.168.64.10:5000/;
-				proxy_redirect /index.php /phpmyadmin/index.php;      
-                proxy_set_header X-Forwarded-Proto $scheme; 
+                proxy_pass http://MINIKUBE_IP:5000/;
         }
 }
