--- a/nginx/srcs/default.conf
+++ b/nginx/srcs/default.conf
@@ -33,12 +33,12 @@ server {
 		}
 
 		location /wordpress {
-				return 307 http://192.168.64.10:5050/;
+				return 307 http://192.168.64.11:5050/;
 		}
 
-		location /phpmyadmin {
-                proxy_pass http://192.168.64.10:5000/;
-				proxy_redirect /index.php /phpmyadmin/index.php;      
-                proxy_set_header X-Forwarded-Proto $scheme; 
+		location /phpmyadmin/ {
+                proxy_pass http://192.168.64.11:5000/;
+				proxy_set_header X-Forwarded-Proto https;
+				proxy_redirect /index.php /phpmyadmin/index.php;
         }
 }
