--- a/nginx/srcs/default_.conf
+++ b/nginx/srcs/default_.conf
@@ -32,17 +32,13 @@ server {
         	proxy_buffer_size 1024k;
 		}
 
-		location ~ \.php$ {
-			include fastcgi.conf;
-            include fastcgi_params; #or whatever you named it
-			fastcgi_pass  127.0.0.1:9000;
-		}
-
 		location /wordpress {
 				return 307 http://MINIKUBE_IP:5050/;
 		}
 
-		location /phpmyadmin {
+		location /phpmyadmin/ {
+				proxy_set_header X-Forwarded-Proto https;
                 proxy_pass http://MINIKUBE_IP:5000/;
+				proxy_redirect /index.php /phpmyadmin/index.php;
         }
 }
