--- a/yaml/grafana.yaml
+++ b/yaml/grafana.yaml
@@ -15,6 +15,19 @@ spec:
     app: grafana
   type: LoadBalancer
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: grafana-pv-claim
+  labels:
+    app: grafana
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -39,3 +52,10 @@ spec:
         ports:
         - containerPort: 3000
           name: grafana
+        volumeMounts:
+        - name: grafana-persistent-storage
+          mountPath: /
+      volumes:
+      - name: grafana-persistent-storage
+        persistentVolumeClaim:
+          claimName: grafana-pv-claim
