volume claim added

--- a/yaml/ftps.yaml
+++ b/yaml/ftps.yaml
@@ -37,19 +37,6 @@ spec:
     requests:
       storage: 2Gi
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: ftps-pv-claim
-  labels:
-    app: ftps
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 2Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -82,7 +69,7 @@ spec:
           name: ftps-3
         volumeMounts:
         - name: ftps-persistent-storage
-          mountPath: /
+          mountPath: /root
       volumes:
       - name: ftps-persistent-storage
         persistentVolumeClaim:
