--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-FROM alpine
+FROM alpine:3.11
 COPY ./script/ .
 RUN sh install.sh
 COPY ./srcs/default.conf /etc/nginx/conf.d/default.conf
