--- a/yaml/ftps.yaml
+++ b/yaml/ftps.yaml
@@ -70,6 +70,11 @@ spec:
         volumeMounts:
         - name: ftps-persistent-storage
           mountPath: /root
+        livenessProbe:
+          initialDelaySeconds: 5
+          periodSeconds: 1
+          exec:
+            command: ["sh", "health.sh"]
       volumes:
       - name: ftps-persistent-storage
         persistentVolumeClaim:
